# cc-token-governor

./: .gitignore  LICENSE  README.md  pyproject.toml
hooks/: post_tool_use.py  pre_tool_use.py  stop.py  user_prompt_submit.py
src/cc_token_governor/: __init__.py  cli.py  models.py  toxicity.py
src/cc_token_governor/audit/: jsonl_reader.py
src/cc_token_governor/diagnosis/: __init__.py  sniffers.py
src/cc_token_governor/learning/: store.py
src/cc_token_governor/policy/: __init__.py  compiler.py  evaluator.py
src/cc_token_governor/runtime/: __init__.py  hook_runner.py  state.py
tests/: test_cli.py  test_evaluator.py  test_governor.py  test_hook_runner.py  test_jsonl_reader.py  test_sniffers.py
tests/fixtures/: death_loop_payload.json  failed_bash_result_payload.json  repeated_read_payload.json  waste_session.jsonl
