[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-token-governor"
version = "2.0.1"
description = "Runtime token-waste governor for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
cc-governor = "cc_token_governor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
